# pybracket

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LEAGUES_DESIGN.md  LICENSE  MULTISTAGE_DESIGN.md  README.md  SCORING_DESIGN.md  SPEC.md  pyproject.toml
pybracket/: __init__.py  errors.py  operations.py  tournament.py
pybracket/advancement/: __init__.py  engine.py  placement.py
pybracket/formats/: __init__.py  base.py  double_elim.py  gauntlet.py  league.py  pools.py  round_robin.py  single_elim.py  swiss.py
pybracket/models/: __init__.py  bracket.py  cross_division.py  enums.py  game.py  match.py  participant.py  placement.py  points.py  round.py  standing.py  tournament.py
pybracket/naming/: __init__.py  round_names.py
pybracket/pairing/: __init__.py  dutch.py  monrad.py
pybracket/seeding/: __init__.py  algorithms.py  byes.py  pool_seeding.py
pybracket/tiebreakers/: __init__.py  accumulated.py  base.py  buchholz.py  head_to_head.py  mini_league.py  standings.py  stat_tiebreaker.py  win_count.py
pybracket/utils/: __init__.py  math.py  serialization.py  validation.py
tests/: conftest.py  helpers.py  test_accumulation.py  test_advancement.py  test_best_of.py  test_draws_points.py  test_math.py  test_naming.py  test_placement.py  test_reseed.py  test_serialization.py  test_series.py  test_tournament.py  test_unwind.py  test_validation.py
tests/formats/: test_bye_rounds.py  test_double_elim.py  test_gauntlet.py  test_gauntlet_round_choice.py  test_league.py  test_pools.py  test_round_robin.py  test_single_elim.py  test_swiss.py  test_truncation.py
tests/pairing/: test_dutch.py  test_monrad.py
tests/seeding/: test_algorithms.py  test_byes.py  test_pool_seeding.py
tests/tiebreakers/: test_accumulated.py  test_buchholz.py  test_head_to_head.py  test_mini_league.py  test_stat_tiebreaker.py
