[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybracket"
version = "0.1.0"
description = "A storage-agnostic, game-agnostic Python library for tournament bracket management."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ProjectRio authors" }]
keywords = [
    "tournament",
    "bracket",
    "single-elimination",
    "double-elimination",
    "round-robin",
    "swiss",
    "pools",
    "gauntlet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/ProjectRio/pybracket"
Repository = "https://github.com/ProjectRio/pybracket"

[tool.hatch.build.targets.wheel]
packages = ["pybracket"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["pybracket"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["pybracket", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "SIM", # simplify
]
ignore = [
    "E501", # line length handled by formatter / not enforced strictly
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
